# indra_curation

./: README.md  curation.js  setup.cfg  stmts.html  test.html
curation_service/: app.py  validation.py
curation_service/static/: curation.js  evidence.js  interface.js  mixins.js  statement.js  stmt_display.js  top_group.js
curation_service/templates/curation_service/: cur_stmts_view.html  fresh_stmts_view.html
indra_curation/: app.py  validation.py
indra_curation/static/: curation.js  interface.js  mid_group.js  mixins.js  statement.js  stmt_display.js
indra_curation/templates/curation_service/: fresh_stmts_view.html
src/indra_curation/static/: interface.js
tests/: test_validation.py
