[metadata]
name = indra_curation
version = 1.0.0
description = INDRA Curation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    indra
    indra_db
    flask

include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
